--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "file-saver": "^2.0.5",
     "jspdf-autotable": "^3.8.2",
     "mh-prime-dynamic-table": "^0.0.3",
+    "ngx-spinner": "^0.0.0",
     "primeflex": "^3.2.0",
     "primeicons": "6.0.1",
     "primeng": "14.1.2",
