--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "chart.js": "^3.3.2",
     "file-saver": "^2.0.5",
     "jspdf-autotable": "^3.8.2",
-    "mh-prime-dynamic-table": "^0.0.3",
+    "mh-prime-dynamic-table": "^0.0.4-beta.2",
     "ngx-spinner": "^0.0.0",
     "primeflex": "^3.2.0",
     "primeicons": "6.0.1",
